feat: minimal mlab-ns compatibility shim
We implement a minimal mlab-ns compatibility shim.

The service has been EOL for a long time now. We recently
reached out to integrators and it seems there are still some
that need a small compatibility shim to avoid breaking
legacy applications.

Their migration is fully underway, but there needs to be time
to migrate a fleet of legacy clients, which are using the output
of mlab-ns for archival purposes.

Accordingly, this pull request implements just the minimum
functionality to avoid breaking those applications. Yet, note
that the returned response is not actionable anymore for
running ndt5 tests (and it can't be used for running ndt7
tests either).

The complete plan is this:

1. merge this diff

2. deploy

3. use `dispatch.yaml` to route to `locate`

4. discontinue `mlab-ns`

5. wait for the legacy applications queue to drain

6. circle back and zap this diff

This is probably the last chapter in mlab-ns glorious life.

See https://github.com/m-lab/locate/issues/185.

Adapted from https://github.com/m-lab/locate/pull/184.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -48,6 +48,11 @@ linters:
       disabled-checks:
         - commentFormatting
         - hugeParam
+        # sloppyLen's only useful patterns (len(x) >= 0 always true,
+        # len(x) < 0 always false) are already caught by staticcheck.
+        # Its remaining check (len(x) <= 0 → len(x) == 0) is a style
+        # preference that conflicts with defensive domain-exclusion style.
+        - sloppyLen
 
     staticcheck:
       checks:
